# cudaranai

./: .clang-format  .gitignore  CMakeLists.txt  README.md  compile_check.sh  demo.ipynb
core/: activation.cu  activation.cuh  array.cu  common.cuh  conv.cu  conv.cuh  dataloader.cu  dataloader.cuh  dataset.cuh  dropout.cu  dropout.cuh  flatten.cu  flatten.cuh  initializer.cu  initializer.cuh  layer.cuh  linear.cu  linear.cuh  loss.cu  loss.cuh  mathfunc.cu  mathop.cu  mathops.cu  maxpool.cu  maxpool.cuh  mnist.cu  mnist.cuh  network.cu  network.cuh  nnv2.cuh  optimizer.cu  optimizer.cuh  utils.cu
core/cuda/: arithmetic.cuh  matmul.cuh  mean.cuh  sum.cuh  transpose.cuh
demo/: 3conv2fc1drop_rms.cu  3conv2fc_rms.cu  3conv3fc2drop_adam.cu  3conv3fc2drop_sgd.cu  cnn_01.cu  cnn_02.cu  cnn_03.cu  cnn_03a.cu  cnn_04.cu  cnn_05.cu  lenet5_var1.cu
demos/: 2conv1fc_adam.cu  3conv2fc_rms.cu  lenet5.cu  lenet5_var1.cu
examples/: 2conv1fc_adam.cu
mocks/: activation_test.cu  mathfunc_test.cu  test_utils.cuh
test/: activation_test.cu  conv_test.cu  dataloader_test.cu  dropout_test.cu  linear_test.cu  mathops_test.cu  maxpool_test.cu  test_utils.cuh
tests/: activation_test.cu  dataloader_test.cu  mathop_test.cu  maxpool_test.cu
